tests/paczka1/fuzzy1/32587068.err
Error in line 22: C3dbx A337 16,1
Error in line 24: A337 S165 62,1
Error in line 17: BGiamrNADvV S56 32,1
